[gd_scene load_steps=23 format=2]

[ext_resource path="res://Hud/Radar/radar.png" type="Texture" id=1]
[ext_resource path="res://Hud/Radar/radar - setor 1.png" type="Texture" id=2]
[ext_resource path="res://Hud/HP/Barra.png" type="Texture" id=3]
[ext_resource path="res://Hud/HP/Vida.png" type="Texture" id=4]
[ext_resource path="res://Hud/Radar/radar - setor 4.png" type="Texture" id=5]
[ext_resource path="res://Hud/Radar/radar - setor 3.png" type="Texture" id=6]
[ext_resource path="res://Hud/Radar/radar - setor 2.png" type="Texture" id=7]
[ext_resource path="res://Hud/BarraVida.gd" type="Script" id=9]
[ext_resource path="res://Penas/Penas Script/Pena2Spawner.gd" type="Script" id=10]
[ext_resource path="res://Adonis/Adonis Script/AdonisSpawner.gd" type="Script" id=11]
[ext_resource path="res://Hud/rada.gd" type="Script" id=12]
[ext_resource path="res://Hud/radar_2/marcador_loggos.png" type="Texture" id=13]
[ext_resource path="res://Hud/radar_2/_radar.png" type="Texture" id=14]
[ext_resource path="res://Hud/radar_2/radar2.gd" type="Script" id=15]
[ext_resource path="res://Semente/Semeste Script/ComidaSpawner.gd" type="Script" id=16]
[ext_resource path="res://Loggos/Loggos Script/WinSpawner.gd" type="Script" id=17]
[ext_resource path="res://Adam/Adam Script/Jogador.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Radar",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Radar-1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Radar-2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Radar-3",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Radar-4",
"speed": 5.0
} ]

[sub_resource type="SphereMesh" id=5]
radius = 5.0
height = 10.0

[sub_resource type="SphereMesh" id=1]
radius = 50.0
height = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.9608

[sub_resource type="GDScript" id=3]
script/source = "extends Node2D

export(PackedScene) var pena1 = preload(\"res://Penas/Penas Cenas/Pena1.tscn\")
# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"



# Called when the node enters the scene tree for the first time.
func _ready():
	var pena = pena1.instance()
	add_child(pena)
	
	pena.position.x = +200
	pena.position.y = -200
	for i in 3:
		pena = pena1.instance()
		add_child(pena)
		randomize()
		pena.position.x = rand_range(-2000, 2000)
		pena.position.y = rand_range(-2000, 2000)
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Game" type="Node2D"]
position = Vector2( 515, 301 )

[node name="Jogador" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="Jogador"]
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Jogador/Camera2D"]

[node name="TextureRect" type="TextureRect" parent="Jogador/Camera2D/CanvasLayer"]
margin_left = 762.0
margin_top = 34.9999
margin_right = 1792.0
margin_bottom = 269.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script = ExtResource( 9 )

[node name="TextureProgress" type="TextureProgress" parent="Jogador/Camera2D/CanvasLayer/TextureRect"]
margin_left = 40.0001
margin_top = 30.0003
margin_right = 997.0
margin_bottom = 204.0
value = 100.0
texture_progress = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Jogador/Camera2D/CanvasLayer"]
visible = false
position = Vector2( 929, 514 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "Radar"
script = ExtResource( 12 )

[node name="TimerRadar" type="Timer" parent="Jogador/Camera2D/CanvasLayer/AnimatedSprite"]
wait_time = 10.0
one_shot = true

[node name="radar" type="MarginContainer" parent="Jogador/Camera2D/CanvasLayer"]
margin_left = 841.0
margin_top = 429.0
margin_right = 997.0
margin_bottom = 585.0
script = ExtResource( 15 )

[node name="NinePatchRect" type="NinePatchRect" parent="Jogador/Camera2D/CanvasLayer/radar"]
margin_right = 156.0
margin_bottom = 156.0
texture = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="Jogador/Camera2D/CanvasLayer/radar/NinePatchRect"]
margin_right = 154.0
margin_bottom = 154.0

[node name="marcacao_loggos" type="Sprite" parent="Jogador/Camera2D/CanvasLayer/radar/NinePatchRect/TextureRect"]
position = Vector2( 78, 80 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )

[node name="marcacao_adam" type="Sprite" parent="Jogador/Camera2D/CanvasLayer/radar/NinePatchRect/TextureRect"]
position = Vector2( 78, 79 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Jogador/Camera2D/CanvasLayer/radar/NinePatchRect/TextureRect/marcacao_adam"]
modulate = Color( 0, 0, 0, 1 )
mesh = SubResource( 5 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Jogador"]
modulate = Color( 0.0666667, 0.8, 0.498039, 1 )
mesh = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Jogador/MeshInstance2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jogador/MeshInstance2D/Area2D"]
position = Vector2( 1, -1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Jogador"]

[node name="ComidaSpawner" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="WinSpawner" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="AdonisSpawner" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="AdonisSpawner"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PenaSpawner" type="Node2D" parent="."]

[node name="Pena1Spawner" type="Node2D" parent="PenaSpawner"]
script = SubResource( 3 )

[node name="TimerPena1" type="Timer" parent="PenaSpawner/Pena1Spawner"]
wait_time = 10.0
one_shot = true

[node name="Pena2Spawner" type="Node2D" parent="PenaSpawner"]
position = Vector2( 0, -6.10352e-05 )
script = ExtResource( 10 )

[node name="TimerPena2" type="Timer" parent="PenaSpawner/Pena2Spawner"]
wait_time = 10.0
one_shot = true

[connection signal="ready" from="Jogador" to="ComidaSpawner" method="_on_Jogador_ready"]
[connection signal="timeout" from="Jogador/Camera2D/CanvasLayer/AnimatedSprite/TimerRadar" to="Jogador/Camera2D/CanvasLayer/AnimatedSprite" method="_on_TimerRadar_timeout"]
[connection signal="body_entered" from="Jogador/MeshInstance2D/Area2D" to="AdonisSpawner" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Jogador/Timer" to="Jogador" method="_on_Timer_timeout"]
[connection signal="timeout" from="AdonisSpawner/Timer" to="AdonisSpawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="PenaSpawner/Pena1Spawner/TimerPena1" to="Jogador" method="_on_TimerPena1_timeout"]
[connection signal="timeout" from="PenaSpawner/Pena2Spawner/TimerPena2" to="Jogador" method="_on_TimerPena2_timeout"]
